manifests/tools/manifests/nextcloud/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    shared-gateway-access: 'true'
