manifests/tools/manifests/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - nextcloud.matoru.ru
  parentRefs:
  - name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: nextcloud
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
